@@ -1,6 +1,6 @@
 #!/usr/bin/python
 # -*- coding: utf-8 -*-
-# Copyright (C) 2008-2015, Luis Pedro Coelho <luis@luispedro.org>
+# Copyright (C) 2008-2020, Luis Pedro Coelho <luis@luispedro.org>
 # vim: set ts=4 sts=4 sw=4 expandtab smartindent:
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
@@ -42,6 +42,7 @@ class CleanupCommand(SubCommand):
 
         if options.cleanup_locks_only:
             removed = store.remove_locks()
+            options.print_out('Removed {removed} locks'.format(removed=removed))
         elif options.cleanup_failed_only:
             removed = 0
             for name in list(store.listlocks()):
@@ -49,11 +50,11 @@ class CleanupCommand(SubCommand):
                 if lock.is_failed():
                     lock.release()
                     removed += 1
+            options.print_out('Removed {removed} failure locks'.format(removed=removed))
         else:
             tasks = task.alltasks
             removed = store.cleanup(tasks, keeplocks=options.cleanup_keep_locks)
-
-        options.print_out('Removed %s files' % removed)
+            options.print_out('Removed {removed} objects'.format(removed=removed))
 
     def parse(self, parser):
         group = parser.add_mutually_exclusive_group()
